--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('com.h2database:h2')
+    compile('org.assertj:assertj-core:3.6.2')
 
 }
