--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     compile('org.assertj:assertj-core:3.6.2')
     compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+    compile('org.springframework.session:spring-session-jdbc')
+    testCompile('org.springframework.security:spring-security-test')
 
 }
