--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,10 @@ dependencies {
     compile('org.projectlombok:lombok')
 
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+
     compile('com.h2database:h2')
+    compile('org.mariadb.jdbc:mariadb-java-client')
+
     compile('org.assertj:assertj-core:3.6.2')
     compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
@@ -41,4 +44,6 @@ dependencies {
 
     testCompile('org.springframework.security:spring-security-test')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+
 }
