--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
-    bucket: springboot-cannedcoffee-build
-    region: ap-northeast-2
+    bucket: springboot-cannedcoffee-deploy
+    region: us-east-2c
     skip_cleanup: true
     acl: private
     local_dir: deploy
