--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,15 @@ deploy:
     local_dir: deploy
     wait_until_deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: springboot-cannedcoffee-deploy
+    application: springboot-cannedcoffee-codedeploy
+    deployment_group: springboot-cannedcoffee-group
+    region: us-east-2
+    wait_until_deployed: true
+
 
 before_install:
   - chmod +x gradlew
