--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,11 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: springboot-cannedcoffee-deploy
+    key: springboot-cannedcoffee.zip
+    bundle_type: zip
     application: springboot-cannedcoffee-codedeploy
     deployment_group: springboot-cannedcoffee-group
     region: us-east-2
-    key: deploy/springboot-cannedcoffee.zip
     wait_until_deployed: true
 
 
