--- a/appspec.yml
+++ b/appspec.yml
@@ -12,6 +12,9 @@ permissions:
     group: ec2-user
 
 hooks:
+  BeforeInstall:
+    - location: deploy-before.sh
+      runas: ec2-user
   ApplicationStart:
     - location: deploy.sh
       timeout: 60
