--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'io.spring.dependency-management'
 
 
 group 'org.cannedcoffee.firsttoy'
-version '1.0.3-SNAPSHOT'
+version '1.0.3-SNAPSHOT-'+ new Date().format("yyyyMMddHHmmss")
 
 sourceCompatibility = 1.8
 
